lang/cython3: Add cython3 3.0.2

--- a/lang/cython3/Makefile
+++ b/lang/cython3/Makefile
@@ -1,10 +1,11 @@
 PORTNAME=	cython
-PORTVERSION=	0.29.36
+PORTVERSION=	3.0.2
 CATEGORIES=	lang python
 MASTER_SITES=	PYPI \
 		https://github.com/cython/cython/releases/download/${PORTVERSION}/
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 DISTNAME=	Cython-${PORTVERSION}
+PKGNAMESUFFIX=	3
 
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Compiler for Writing C Extensions for the Python Language
@@ -14,11 +15,11 @@ WWW=		https://cython.org/ \
 LICENSE=	APACHE20
 LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 
-USES=		compiler:c11 python:2.7+
+USES=		compiler:c11 python
 USE_PYTHON=	allflavors autoplist concurrent distutils
 
 # bin/cygdb bin/cython bin/cythonize
-CONFLICTS_INSTALL=	py*-cython-devel py*-cython3
+CONFLICTS_INSTALL=	py*-cython py*-cython-devel
 
 post-install:
 	${FIND} ${STAGEDIR}${PYTHONPREFIX_SITELIBDIR}/Cython -name '*.so' -exec ${STRIP_CMD} {} +
