devel/py-decopatch: Add py-decopatch 1.4.10
Because of a tiny oddity in the python language, writing decorators without help
can be a pain because you have to handle the no-parenthesis usage explicitly.
decopatch provides a simple way to solve this issue so that writing decorators
is simple and straightforward.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -4576,6 +4576,7 @@
     SUBDIR += py-debtcollector
     SUBDIR += py-debugpy
     SUBDIR += py-debugtools
+    SUBDIR += py-decopatch
     SUBDIR += py-decorator
     SUBDIR += py-decoratortools
     SUBDIR += py-deepdiff
