devel/google-cloud-cpp: Fix build with abseil 20230125.0+ and re2 20230601+

--- a/devel/google-cloud-cpp/Makefile
+++ b/devel/google-cloud-cpp/Makefile
@@ -35,6 +35,7 @@ CMAKE_ARGS=	-DGOOGLE_CLOUD_CPP_CXX_STANDARD=17 \
 		-DGOOGLE_CLOUD_CPP_DEPENDENCY_PROVIDER=package
 CMAKE_ON=	BUILD_SHARED_LIBS
 CMAKE_OFF=	BUILD_TESTING GOOGLE_CLOUD_CPP_ENABLE_CXX_EXCEPTIONS
+USE_CXXSTD=	c++17
 
 GOOGLEAPI_GH_TAG=	d39c91b3ac0abec1490ef00010107355a4dae317
 
