--- a/math/or-tools/Makefile
+++ b/math/or-tools/Makefile
@@ -35,6 +35,7 @@ USE_LDCONFIG=	yes
 CMAKE_OFF=	BUILD_PYTHON BUILD_DEPS INSTALL_BUILD_DEPS BUILD_EXAMPLES BUILD_SAMPLES
 CMAKE_ON=	BUILD_CXX
 CMAKE_TESTING_ON=	BUILD_EXAMPLES BUILD_CXX_EXAMPLES
+CXXFLAGS+=	-DABSL_LEGACY_THREAD_ANNOTATIONS
 
 CONFIGURE_ENV=	UNIX_CBC_DIR=${LOCALBASE} UNIX_CLP_DIR=${LOCALBASE}
 
