textproc/kibana7: Fix build with abseil 20230125.0+ and re2 20230601+

--- a/textproc/kibana7/Makefile
+++ b/textproc/kibana7/Makefile
@@ -18,13 +18,14 @@ LIB_DEPENDS=	libre2.so:devel/re2 \
 		libuv.so:devel/libuv
 RUN_DEPENDS=	${LOCALBASE}/bin/node:www/node16
 
-USES=		compiler:c++14-lang cpe nodejs:16,build,run python:build
+USES=		compiler:c++17-lang cpe nodejs:16,build,run python:build
 CPE_VENDOR=	elastic
 
 USE_GITHUB=	nodefault
 GH_TUPLE=	nodejs:nan:v${_NODE_NAN_VER}:node_nan \
 		uhop:node-re2:${_NODE_RE2_VER}:node_re2
 
+USE_CXXSTD=	c++17
 USE_RC_SUBR=	${PORTNAME}
 
 WWWDIR=		${PREFIX}/www/${PORTNAME}${PKGNAMESUFFIX}
@@ -57,7 +58,7 @@ post-patch:
 	${FIND} -s ${WRKSRC}/node_modules -type d -empty -delete
 	cd ${_RE2DIR} && ${PATCH} -p0 < ${_RE2PATCHES}
 	${REINPLACE_CMD} -e "s|%%PREFIX%%|${PREFIX}|g" \
-	-e "s|%%DEVDIR%%|${_DEVDIR}|g" ${_RE2DIR}/binding.gyp \
+	-e "s|%%DEVDIR%%|${_DEVDIR}|g" ${_RE2DIR}/binding.gyp
 
 pre-configure:
 	( \
