--- a/devel/google-cloud-cpp/Makefile
+++ b/devel/google-cloud-cpp/Makefile
@@ -1,6 +1,7 @@
 PORTNAME=	google-cloud-cpp
 DISTVERSIONPREFIX=	v
 DISTVERSION=	2.13.0
+PORTREVISION=	1
 CATEGORIES=	devel
 DIST_SUBDIR=	${PORTNAME}
 EXTRACT_ONLY=	${DISTNAME}${EXTRACT_SUFX}
