devel/meson: mark as broken for CheriABI
Meson is implemented in Python. Mark it as broken for CheriABI as we
don't have CheriABI Python and allow to use a hybrid ABI package
instead.

--- a/devel/meson/Makefile
+++ b/devel/meson/Makefile
@@ -7,6 +7,9 @@ MAINTAINER=	desktop@FreeBSD.org
 COMMENT=	High performance build system
 WWW=		https://mesonbuild.com/
 
+BROKEN_purecap=	requires missing CheriABI Python at run time
+USE_PKG64=	1
+
 LICENSE=	APACHE20
 LICENSE_FILE=	${WRKSRC}/COPYING
 
