print/ghostscript10: update port to 10.02.0
* Exclude bundled libexpat
* Link against external libtesseract and libleptonica on request

Changelog: https://ghostscript.readthedocs.io/en/gs10.02.0/News.html

PR:		272541

--- a/print/ghostscript10/Makefile
+++ b/print/ghostscript10/Makefile
@@ -1,13 +1,12 @@
 PORTNAME=	ghostscript
-DISTVERSION=	10.01.2
-PORTREVISION=	2
+DISTVERSION=	10.02.0
 CATEGORIES=	print
 MASTER_SITES=	https://github.com/ArtifexSoftware/ghostpdl-downloads/releases/download/gs${DISTVERSION:S/.//g}/
 PKGNAMESUFFIX=	${GS_MAJOR_VERSION}
 
 MAINTAINER=	michael.osipov@siemens.com
 COMMENT=	PostScript and PDF interpreter
-WWW=		https://ghostscript.com/
+WWW=	https://ghostscript.com/
 
 LICENSE=	AGPLv3
 LICENSE_FILE=	${WRKSRC}/LICENSE
@@ -34,13 +33,16 @@ CONFLICTS_INSTALL=	ghostscript[789]-base \
 			ghostscript9-agpl-x11
 
 EXTRACT_AFTER_ARGS=	--exclude cups/libs \
+			--exclude expat \
 			--exclude freetype \
 			--exclude ijs \
 			--exclude jbig2dec \
 			--exclude jpeg \
 			--exclude lcms2mt \
+			--exclude leptonica \
 			--exclude libpng \
 			--exclude openjpeg \
+			--exclude tesseract \
 			--exclude tiff \
 			--exclude zlib
 
@@ -49,11 +51,11 @@ GNU_CONFIGURE=	yes
 ALL_TARGET=	so
 INSTALL_TARGET=	soinstall
 
-DATADIR=		${PREFIX}/share/${PORTNAME}/${DISTVERSION}
+DATADIR=	${PREFIX}/share/${PORTNAME}/${DISTVERSION}
 
 GS_MAJOR_VERSION=	${DISTVERSION:R:R}
 GS_MINOR_VERSION=	${DISTVERSION:R:E}
-PLIST_SUB=		GS_MAJOR_VERSION=${GS_MAJOR_VERSION} \
+PLIST_SUB=	GS_MAJOR_VERSION=${GS_MAJOR_VERSION} \
 			GS_MINOR_VERSION=${GS_MINOR_VERSION}
 
 CONFIGURE_ARGS+=	--disable-compile-inits \
@@ -71,22 +73,23 @@ CONFIGURE_ARGS+=	--disable-compile-inits \
 			--with-libpaper \
 			--with-system-libtiff
 
-OPTIONS_DEFINE=		CUPS IJS TESSERACT X11
+OPTIONS_DEFINE=	CUPS IJS TESSERACT X11
 OPTIONS_DEFAULT=	CUPS X11
 
-IJS_DESC=			Support libijs based Ghostscript devices
-TESSERACT_DESC=			Enable bundled Tesseract OCR engine
+IJS_DESC=	Support libijs based Ghostscript devices
+TESSERACT_DESC=	Enable Tesseract OCR engine
 
-CUPS_LIB_DEPENDS=		libcups.so:print/cups
-CUPS_CONFIGURE_ENABLE=		cups
+CUPS_LIB_DEPENDS=	libcups.so:print/cups
+CUPS_CONFIGURE_ENABLE=	cups
 
-IJS_LIB_DEPENDS=		libijs.so:print/libijs
-IJS_CONFIGURE_WITH=		ijs
+IJS_LIB_DEPENDS=	libijs.so:print/libijs
+IJS_CONFIGURE_WITH=	ijs
 
-TESSERACT_USES=			compiler:c++17-lang
+TESSERACT_USES=	libarchive
 TESSERACT_CONFIGURE_WITH=	tesseract
-# No TESSERACT_LIB_DEPENDS=	libtesseract.so:graphics/tesseract
-# See https://bugs.ghostscript.com/show_bug.cgi?id=706490
+TESSERACT_LIB_DEPENDS=	libcurl.so:ftp/curl \
+		libleptonica.so:graphics/leptonica \
+		libtesseract.so:graphics/tesseract
 
 X11_CONFIGURE_WITH=	x
 X11_USES=	xorg
