games/veloren-weekly: update to s20230913
Changes:	https://gitlab.com/veloren/veloren/-/compare/93fc044b0...6c57d1771

--- a/games/veloren-weekly/Makefile
+++ b/games/veloren-weekly/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	veloren
 PORTVERSION=	s20230913
+PORTREVISION=	1
 CATEGORIES=	games wayland
 PKGNAMESUFFIX=	-weekly
 
@@ -23,7 +24,7 @@ RUN_DEPENDS=	${LOCALBASE}/lib/alsa-lib/libasound_module_pcm_oss.so:audio/alsa-pl
 USES=		cargo xorg
 USE_XORG=	xcb
 USE_GITLAB=	yes
-GL_TAGNAME=	93fc044b03b77ed2df47389a38541ede5efc7274
+GL_TAGNAME=	6c57d177144a9cb8f6ddae91f3094d31fb6fcd67
 CARGO_ENV=	VELOREN_USERDATA_STRATEGY=system SHADERC_LIB_DIR="${LOCALBASE}/lib"
 PLIST_FILES=	bin/${PORTNAME}-server-cli \
 		bin/${PORTNAME}-voxygen \
