www/chromium: fix linker flags for aarch64
When compiling Chromium with LLVM 16 for aarch64, we hit the same issue
as upstream FreeBSD ports did for i386: Chromium cannot link with ffmpeg
due to text relocations in assembly code.

A similar issue was reported and fixed in the past in upstream Chromium
[1]. Note that the embedded ffmpeg automatically adds -Wl,-z,notext for
lld when Chromium is compiled for amd64 but not arm64.

[1] https://issuetracker.google.com/issues/187786235?pli=1

--- a/www/chromium/Makefile
+++ b/www/chromium/Makefile
@@ -259,6 +259,7 @@ FFMPEG_BDIR=	${WRKSRC}/third_party/ffmpeg/build.${FFMPEG_TARGET}.freebsd/${FFMPE
 FFMPEG_CDIR=	${WRKSRC}/third_party/ffmpeg/chromium/config/${FFMPEG_BRAND}/freebsd/${FFMPEG_TARGET}
 
 # Allow relocations against read-only segments (override lld default)
+LDFLAGS_aarch64=-Wl,-znotext
 LDFLAGS_i386=	-Wl,-znotext
 
 # TODO: -isystem, would be just as ugly as this approach, but more reliably
