sysutils/edk2: enable TPM on bhyve
bhyve gained support for TPM emulation in the upcoming FreeBSD 14.0. The
firmware has to setup the TPM to make it useable for the OS.

Reviewed by:		manu
Approved by:		manu
Sponsored by:		Beckhoff Automation GmbH & Co. KG
Differential Revision:	https://reviews.freebsd.org/D41868

--- a/sysutils/edk2/Makefile
+++ b/sysutils/edk2/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	edk2
 PORTVERSION=	g202308
-PORTREVISION=	2
+PORTREVISION=	3
 CATEGORIES=	sysutils
 
 PATCH_SITES=	https://github.com/${GH_ACCOUNT}/${GH_PROJECT}/commit/
@@ -115,7 +115,7 @@ ONLY_FOR_ARCHS=	amd64
 ONLY_FOR_ARCHS_REASON=	Bhyve only runs on x64
 PLAT=		bhyve
 PLAT_ARCH=	X64
-PLAT_ARGS+=	-D SECURE_BOOT_ENABLE=TRUE
+PLAT_ARGS+=	-D SECURE_BOOT_ENABLE=TRUE -D TPM2_ENABLE=TRUE
 PLAT_TARGET=	RELEASE
 PLATFILE=	OvmfPkg/Bhyve/BhyveX64.dsc
 PLAT_RESULT=	BhyveX64/${PLAT_TARGET}_GCC5/FV/BHYVE.fd
