--- a/sysutils/edk2/Makefile
+++ b/sysutils/edk2/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	edk2
 PORTVERSION=	g202308
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES=	sysutils
 
 PATCH_SITES=	https://github.com/${GH_ACCOUNT}/${GH_PROJECT}/commit/
@@ -115,6 +115,7 @@ ONLY_FOR_ARCHS=	amd64
 ONLY_FOR_ARCHS_REASON=	Bhyve only runs on x64
 PLAT=		bhyve
 PLAT_ARCH=	X64
+PLAT_ARGS+=	-D SECURE_BOOT_ENABLE=TRUE
 PLAT_TARGET=	RELEASE
 PLATFILE=	OvmfPkg/Bhyve/BhyveX64.dsc
 PLAT_RESULT=	BhyveX64/${PLAT_TARGET}_GCC5/FV/BHYVE.fd
