--- a/www/nginx-devel/Makefile.extmod
+++ b/www/nginx-devel/Makefile.extmod
@@ -248,6 +248,17 @@ OPENTRACING_LIB_DEPENDS=	libopentracing.so:devel/libopentracing
 OPENTRACING_VARS=		DSO_EXTMODS+=opentracing OPENTRACING_SUBDIR=/opentracing
 OPENTRACING_EXTRA_PATCHES=	${PATCHDIR}/extra-patch-nginx-opentracing-opentracing-config
 
+OTEL_GH_TUPLE=		osokin:nginx-otel:f58abc0:otel
+OTEL_VARS=		DSO_EXTMODS+=otel OTEL_SUBDIR=/
+OTEL_LIB_DEPENDS=	libabsl_base.so:devel/abseil \
+			libcares.so:dns/c-ares \
+			libgrpc.so:devel/grpc \
+			libopentelemetry_common.so:devel/opentelemetry-cpp \
+			libprotobuf.so:devel/protobuf \
+			libre2.so:devel/re2
+OTEL_BUILD_DEPENDS=	${LOCALBASE}/include/opentelemetry/proto/common/v1/common.proto:devel/opentelemetry-proto
+OTEL_CONFIGURE_ENV+=	NGX_OTEL_PROTO_DIR=${PREFIX}/include
+
 PASSENGER_NGINX_VER=	6.0.18
 PASSENGER_CATEGORIES=	ruby
 PASSENGER_USES=		ruby
