Correctly resolve conflicts
When merging [1], conflicts in devel/boost-headers and
x11/plasma5-plasma-workspace were incorrectly resolved.

[1] f5f57ea881745f34cad70c31db8b3b64cb429c57

--- a/x11/plasma5-plasma-workspace/Makefile
+++ b/x11/plasma5-plasma-workspace/Makefile
@@ -26,7 +26,7 @@ USE_KDE=	activities activities-stats activitymanagerd archive attica \
 		coreaddons crash dbusaddons emoticons globalaccel \
 		guiaddons holidays i18n iconthemes idletime init itemmodels \
 		itemviews jobwidgets kcmutils kdeclarative kdesu \
-		kdewebkit kio kscreenlocker kwin layer-shell-qt libkscreen \
+		kio kscreenlocker kwin layer-shell-qt libkscreen \
 		libksysguard newstuff notifications notifyconfig package parts \
 		people plasma-framework plasma-integration prison pty runner \
 		service solid sonnet syntaxhighlighting texteditor textwidgets \
