security/openssl30: Fix modules options
PR:		272160
Reported by:	Michael Osipov <michael osipov siemens com>

--- a/security/openssl30/Makefile
+++ b/security/openssl30/Makefile
@@ -63,7 +63,7 @@ CRYPTODEV_DESC=	/dev/crypto support
 CT_DESC=	Certificate Transparency Support
 DES_DESC=	(Triple) Data Encryption Standard
 EC_DESC=	Optimize NIST elliptic curves
-FIPS_DESC=	Build FIPS provider (Note: NOT yet FIPS validated)
+FIPS_DESC=	Build FIPS provider
 GOST_DESC=	GOST (Russian standard)
 HASHES_DESC=	Hash Function Support
 I386_DESC=	i386 (instead of i486+)
