security/openssl30: Enable RFC3779 by default
 * As in base OpenSSL

Reported by:	Juraj Lutter

--- a/security/openssl30/Makefile
+++ b/security/openssl30/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	openssl
 PORTVERSION=	3.0.11
+PORTREVISION=	1
 CATEGORIES=	security devel
 MASTER_SITES=	https://www.openssl.org/source/ \
 		ftp://ftp.cert.dfn.de/pub/tools/net/openssl/source/
@@ -40,7 +41,7 @@ OPTIONS_GROUP_PROTOCOLS=NEXTPROTONEG SCTP SSL3 TLS1 TLS1_1 TLS1_2
 OPTIONS_DEFINE=	ASYNC CRYPTODEV CT KTLS MAN3 RFC3779 SHARED ZLIB
 
 OPTIONS_DEFAULT=ASM ASYNC CT DES EC FIPS GOST KTLS MAN3 MD4 NEXTPROTONEG \
-		RC2 RC4 RMD160 SCTP SHARED SSE2 THREADS TLS1 TLS1_1 TLS1_2
+		RFC3779 RC2 RC4 RMD160 SCTP SHARED SSE2 THREADS TLS1 TLS1_1 TLS1_2
 
 OPTIONS_EXCLUDE=${${OSVERSION} < 1300042:?KTLS:} \
 		${${OSVERSION} > 1300000:?CRYPTODEV:}
