devel/py-bump2version: Add py-bump2version 1.0.1
bump2version is a maintained fork of the excellent bumpversion project.

Version-bump your software with a single command!

A small command line tool to simplify releasing software by updating all version
strings in your source code by the correct increment. Also creates commits and
tags:
- version formats are highly configurable
- works without any VCS, but happily reads tag information from and writes
  commits and tags to Git and Mercurial if available
- just handles text files, so it's not specific to any programming language
- supports Python 3 and PyPy3

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -4425,6 +4425,7 @@
     SUBDIR += py-buildbot-worker
     SUBDIR += py-buildbot-www
     SUBDIR += py-bullet3
+    SUBDIR += py-bump2version
     SUBDIR += py-bytecode
     SUBDIR += py-cabby
     SUBDIR += py-cached-property
