devel/rubygem-sus: Add rubygem-sus 0.23.0
Sus(picious) is an opinionated test framework designed with several goals:
- As fast as possible, aiming for ~10,000 assertions per second per core.
- Isolated tests which parallelise easily (including class definitions).
- Native support for balanced (work-stealing) multi-core execution.
- Incredible test output with detailed failure logging (including nested
  assertions and predicates).

Non-features:
- Flexibility at the expense of performance.
- Backwards compatibility.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -7394,6 +7394,7 @@
     SUBDIR += rubygem-sugar-high
     SUBDIR += rubygem-sumbur
     SUBDIR += rubygem-sundawg_country_codes
+    SUBDIR += rubygem-sus
     SUBDIR += rubygem-svn2git
     SUBDIR += rubygem-swagger-blocks
     SUBDIR += rubygem-sync
