net-p2p/nomadnet: Fix license for GPLv3

--- a/net-p2p/nomadnet/Makefile
+++ b/net-p2p/nomadnet/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	nomadnet
 DISTVERSION=	0.3.8
+PORTREVISION=	1
 CATEGORIES=	net-p2p
 MASTER_SITES=	PYPI
 
@@ -7,7 +8,7 @@ MAINTAINER=	cs@FreeBSD.org
 COMMENT=	Off-grid, resilient mesh communication
 WWW=		https://github.com/markqvist/nomadnet
 
-LICENSE=	MIT
+LICENSE=	GPLv3
 
 RUN_DEPENDS=	lxmf>0:net-p2p/lxmf \
 		${PYTHON_PKGNAMEPREFIX}qrcode>=0:textproc/py-qrcode@${PY_FLAVOR} \
