devel/py-aiobotocore: Add py-aiobotocore 2.6.0
Async client for amazon services using botocore and aiohttp/asyncio.

This library is a mostly full featured asynchronous version of botocore.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -4215,6 +4215,7 @@
     SUBDIR += py-addict
     SUBDIR += py-aenum
     SUBDIR += py-aioapns
+    SUBDIR += py-aiobotocore
     SUBDIR += py-aiocontextvars
     SUBDIR += py-aiofiles
     SUBDIR += py-aiohttp-apispec
