devel/py-pydantic-yaml: Add py-pydantic-yaml 1.1.3
Pydantic-YAML adds YAML capabilities to Pydantic, which is an excellent Python
library for data validation and settings management.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -5274,6 +5274,7 @@
     SUBDIR += py-pydantic-core
     SUBDIR += py-pydantic-extra-types
     SUBDIR += py-pydantic-vault
+    SUBDIR += py-pydantic-yaml
     SUBDIR += py-pydantic2
     SUBDIR += py-pydash
     SUBDIR += py-pydecor
