emulators/ppsspp: drop redundant CMAKE_ARGS after 0a420a765eba
https://github.com/hrydgard/ppsspp/commit/cbab6770756f

--- a/emulators/ppsspp/Makefile
+++ b/emulators/ppsspp/Makefile
@@ -43,7 +43,7 @@ USES=		cmake compiler:c++11-lib gl localbase:ldflags pkgconfig shared-mime-info
 EXCLUDE=	libzip zlib
 EXTRACT_AFTER_ARGS=${EXCLUDE:S,^,--exclude ,}
 USE_GL=		glew opengl
-CMAKE_ON=	${FFMPEG LIBZIP SNAPPY ZSTD:L:S/^/USE_SYSTEM_/} USE_WAYLAND_WSI USE_VULKAN_DISPLAY_KHR
+CMAKE_ON=	${FFMPEG LIBZIP SNAPPY ZSTD:L:S/^/USE_SYSTEM_/} USE_VULKAN_DISPLAY_KHR
 CMAKE_OFF=	USE_DISCORD
 LDFLAGS+=	-Wl,--as-needed # ICE/SM/X11/Xext, Qt5Network
 SUB_FILES=	pkg-message
