databases/py-mariadb: New port: Python MariaDB extension
MariaDB Connector/Python enables python programs to access MariaDB
and MySQL databases, using an API which is compliant with the Python
DB API 2.0 (PEP-249). It is written in C and Python and uses MariaDB
Connector/C client library for client server communication.

WWW: https://www.github.com/mariadb-corporation/mariadb-connector-python

PR:		275157

--- a/databases/Makefile
+++ b/databases/Makefile
@@ -781,6 +781,7 @@
     SUBDIR += py-leveldb
     SUBDIR += py-litecli
     SUBDIR += py-lmdb
+    SUBDIR += py-mariadb
     SUBDIR += py-marshmallow-sqlalchemy
     SUBDIR += py-minidb
     SUBDIR += py-mongoengine
