www/gitlab: added new ports required for version 17.3
(cherry picked from commit 81dbda4eb540e449839268a83380be37bb58240f)

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -7257,6 +7257,7 @@
     SUBDIR += rubygem-locale
     SUBDIR += rubygem-lockfile
     SUBDIR += rubygem-logger
+    SUBDIR += rubygem-logger15
     SUBDIR += rubygem-logging
     SUBDIR += rubygem-logster
     SUBDIR += rubygem-loquacious
