--- a/x11-toolkits/gtk-layer-shell/Makefile
+++ b/x11-toolkits/gtk-layer-shell/Makefile
@@ -21,6 +21,7 @@ USE_GNOME=	gtk30 introspection:build
 USE_GITHUB=	yes
 USE_LDCONFIG=	yes
 GH_ACCOUNT=	wmww
+PLIST_SUB=	VERSION=${PORTVERSION}
 
 OPTIONS_DEFINE=	DOCS EXAMPLES
 
