--- a/x11/imwheel/Makefile
+++ b/x11/imwheel/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	imwheel
 DISTVERSION=	1.0.0pre12
-PORTREVISION=	3
+PORTREVISION=	4
 CATEGORIES=	x11
 MASTER_SITES=	SF/${PORTNAME}/${PORTNAME}-source/${DISTVERSION}
 
@@ -24,6 +24,9 @@ post-patch:
 .for i in imwheel.1 util.c
 	@${REINPLACE_CMD} -e 's|%%PREFIX%%|${PREFIX}|g' ${WRKSRC}/${i}
 .endfor
+
+post-install:
+	@${MV} ${STAGEDIR}${PREFIX}/etc/imwheelrc ${STAGEDIR}${PREFIX}/etc/imwheelrc.sample
 
 post-install-DOCS-on:
 	@${MKDIR} ${STAGEDIR}${DOCSDIR}
