--- a/graphics/mesa-devel/Makefile
+++ b/graphics/mesa-devel/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	mesa
-DISTVERSION=	24.2-branchpoint-2418
-DISTVERSIONSUFFIX=	-ge0157abec6f
+DISTVERSION=	24.2-branchpoint-2516
+DISTVERSIONSUFFIX=	-g5450306a363
 CATEGORIES=	graphics
 PKGNAMESUFFIX=	-devel
 
