--- a/net-mgmt/p5-OSLV-Monitor/Makefile
+++ b/net-mgmt/p5-OSLV-Monitor/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	OSLV-Monitor
 PORTVERSION=	0.0.1
-PORTREVISION=	2
+PORTREVISION=	3
 CATEGORIES=	net-mgmt
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	CPAN:VVELOX
@@ -12,7 +12,8 @@ WWW=		https://github.com/VVelox/OSLV-Monitor
 
 LICENSE=	GPLv3
 
-RUN_DEPENDS=	p5-Clone>0:devel/p5-Clone \
+RUN_DEPENDS=	jq>0:textproc/jq \
+		p5-Clone>0:devel/p5-Clone \
 		p5-ExtUtils-MakeMaker>0:devel/p5-ExtUtils-MakeMaker \
 		p5-File-Slurp>0:devel/p5-File-Slurp \
 		p5-IO-Interface>0:net/p5-IO-Interface \
