--- a/devel/R-cran-cyclocomp/Makefile
+++ b/devel/R-cran-cyclocomp/Makefile
@@ -3,7 +3,7 @@ DISTVERSION=	1.1.1
 CATEGORIES=	devel
 DISTNAME=	${PORTNAME}_${DISTVERSION}
 
-MAINTAINER=	ygy@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Cyclomatic Complexity of R Code
 WWW=		https://github.com/gaborcsardi/cyclocomp
 
