lang/tcl90, x11-toolkits/tk90: Tcl 9.0.0
This is the first release of Tcl/Tk 9.x.

The USES=tcl framework now supports the 9.x series, but we don't expect
many extensions to be ready for 9.x, so please consider this
experimental.

Announcements:
https://sourceforge.net/p/tcl/mailman/message/58821877/ (Tcl)
https://sourceforge.net/p/tcl/mailman/message/58821878/ (Tk)

--- a/x11-toolkits/Makefile
+++ b/x11-toolkits/Makefile
@@ -242,6 +242,7 @@
     SUBDIR += tk-wrapper
     SUBDIR += tk86
     SUBDIR += tk87
+    SUBDIR += tk90
     SUBDIR += tkdnd
     SUBDIR += tkshape
     SUBDIR += tktable
