emulators/yuzu: chase elfctl

--- a/emulators/yuzu/Makefile
+++ b/emulators/yuzu/Makefile
@@ -79,7 +79,7 @@ CMAKE_OFF+=	${ARCH:Maarch64:C/.+/YUZU_USE_PRECOMPILED_HEADERS DYNARMIC_USE_PRECO
 CMAKE_OFF+=	${CMAKE_TESTING_ON}
 CMAKE_TESTING_ON=	YUZU_TESTS
 LDFLAGS+=	-Wl,--as-needed # Qt5Network
-ELF_FEATURES=	${PLIST_FILES:Mbin/*:S/^/+wxneeded:/}
+ELF_FEATURES=	+noprotmax,wxneeded:bin/${PORTNAME}*
 PLIST_FILES=	bin/${PORTNAME}-cmd \
 		bin/${PORTNAME}-room
 
