www/chromium: use proccontrol

--- a/www/chromium/Makefile
+++ b/www/chromium/Makefile
@@ -76,7 +76,7 @@ RUN_DEPENDS=	xdg-open:devel/xdg-utils \
 
 USES=		bison compiler:c++17-lang cpe desktop-file-utils gl gmake gnome \
 		iconv:wchar_t jpeg localbase:ldflags ninja perl5 pkgconfig \
-		python:build qt:5 shebangfix tar:xz xorg
+		proccontrol python:build qt:5 shebangfix tar:xz xorg
 
 CPE_VENDOR=	google
 CPE_PRODUCT=	chrome
@@ -91,6 +91,7 @@ SHEBANG_FILES=	chrome/tools/build/linux/chrome-wrapper buildtools/linux64/clang-
 
 MAKE_ARGS=	-C out/${BUILDTYPE}
 ALL_TARGET=	chrome
+PROCCONTROL_MODE=protmax:disable wxmap:enable
 
 BINARY_ALIAS=	python3=${PYTHON_CMD} \
 		moc=${PREFIX}/bin/moc-qt5
