sysutils/freebsd-rustdate: new port
freebsd-rustdate is a reimplementation of freebsd-update.sh in rust.  It
can fill all the basic roles of freebsd-update for binary upgrades of
your FreeBSD system, and is much faster.

WWW: https://rustdate.over-yonder.net/

PR:		281598
Event:		EuroBSDcon 2024

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -432,6 +432,7 @@
     SUBDIR += frand
     SUBDIR += freebsd-bsdlabel
     SUBDIR += freebsd-fdisk
+    SUBDIR += freebsd-rustdate
     SUBDIR += freebsd-snapshot
     SUBDIR += freecolor
     SUBDIR += freedt
