security/py-passhole: New port: Secure hole for your passwords (KeePass CLI)
passhole is a commandline password manager for KeePass inspired by
pass.

Features:

* fill user/pass field in any application via keyboard shortcut
* add, delete, move, edit, rename entries and groups
* generate alphanumeric, symbolic, or correct horse battery staple style
  passwords
* temporarily cache database password (by default for 10 minutes)
* multiple databases
* supports KeePass v3 and v4 databases
* supports TOTP

WWW: https://pypi.org/project/passhole

PR:		277696
Event:		EuroBSDcon 2024

--- a/security/Makefile
+++ b/security/Makefile
@@ -1000,6 +1000,7 @@
     SUBDIR += py-paramiko
     SUBDIR += py-pass-audit
     SUBDIR += py-pass-git-helper
+    SUBDIR += py-passhole
     SUBDIR += py-passlib
     SUBDIR += py-pbkdf2
     SUBDIR += py-pem
