security/py-pykeepass-cache: New port: Database caching for PyKeePass
pykeepass_cache is a support library for pykeepass. It is a drop-in
replacement for pykeepass.PyKeePass which caches databases in a
background process to make database access faster.

This is useful in situations where the program is terminated between
invocations (e.g. CLI scripts). The background process will
automatically shut down after 300 seconds.

WWW: https://pypi.org/project/pykeepass-cache

PR:		277694
Event:		EuroBSDcon 2024

--- a/security/Makefile
+++ b/security/Makefile
@@ -1021,6 +1021,7 @@
     SUBDIR += py-pyhanko
     SUBDIR += py-pyhanko-certvalidator
     SUBDIR += py-pykeepass
+    SUBDIR += py-pykeepass-cache
     SUBDIR += py-pylibacl
     SUBDIR += py-pymacaroons
     SUBDIR += py-pynacl
