security/py-pykeepass: New port: Python library to interact with keepass databases
pykeepass is a python library to interact with keepass databases
(supports KDBX3 and KDBX4). You can perform many tasks such as
finding entries, groups, manipulate entries, group entries,
attachments, and much more. All in a single Python library.

WWW: https://pypi.org/project/pykeepass

PR:		277695
Evenet:		EuroBSDcon 2024

--- a/security/Makefile
+++ b/security/Makefile
@@ -1020,6 +1020,7 @@
     SUBDIR += py-pyelliptic
     SUBDIR += py-pyhanko
     SUBDIR += py-pyhanko-certvalidator
+    SUBDIR += py-pykeepass
     SUBDIR += py-pylibacl
     SUBDIR += py-pymacaroons
     SUBDIR += py-pynacl
