devel/py-jaxtyping: New port: Type annotations & runtime checking for shape and dtype of JAX arrays

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -5026,6 +5026,7 @@
     SUBDIR += py-jaraco.text
     SUBDIR += py-jaraco.util
     SUBDIR += py-javaproperties
+    SUBDIR += py-jaxtyping
     SUBDIR += py-jdcal
     SUBDIR += py-jedi
     SUBDIR += py-jeepney
